Fix recipe alignment

--- a/src/components/pages/FlavorPrint/StaticContent/AboutEachFlavor/styles.css
+++ b/src/components/pages/FlavorPrint/StaticContent/AboutEachFlavor/styles.css
@@ -73,6 +73,7 @@
       justify-content: space-between;
 
       @media (--s) {
+        align-items: flex-start;
         flex-direction: row;
       }
     }
